--- a/admin.html
+++ b/admin.html
@@ -205,8 +205,18 @@
     <div class="admin-container">
         <div id="loginSection" class="login-section">
             <h2>Админ-панель AferistHelper</h2>
-            <p>Для доступа требуется авторизация через GitHub</p>
-            <button id="loginBtn" class="btn-primary">Войти через GitHub</button>
+            <p>Для доступа требуется авторизация</p>
+            <form id="loginForm" class="config-form" style="max-width: 400px; margin: 0 auto;">
+                <div class="form-group">
+                    <label for="username">Логин:</label>
+                    <input type="text" id="username" required autocomplete="username">
+                </div>
+                <div class="form-group">
+                    <label for="password">Пароль:</label>
+                    <input type="password" id="password" required autocomplete="current-password">
+                </div>
+                <button type="submit" class="btn-primary">Войти</button>
+            </form>
         </div>
 
         <div id="adminSection" class="admin-section">
